# traffic-simulator

./: README.md  c.sh
data/: 2022-dj_doan_test.json
data/2022DJDoan/: connection.xml  edge.xml  tss.xml
data/SALT_202009_00940/: SALT_202009_00940.json
data/dj_sample_data/: 2020-dj_sample.json  tss.xml
include/: SaltConfigInfo.h  SimScenarioInfo.h  SimScenarioManager.h
include/Controller/: MasterGlobalSimController.hpp  ModelInterface.h  ModelV1.h  ModelV2.h  ModelV3.h  SimulationController.h  WorkerLocalSimController.hpp
include/Object/: EventManager.h  NetworkManager.h  TrafficSignalManager.h  VehicleManager.h
include/Object/Agent/: Route.h  VehicleInterface.h  VehicleSimple.h  VehicleV3.h
include/Object/Event/: Event.h
include/Object/Network/: CellInterface.h  CellVersion1.h  CellVersion2.h  CellVersion3.h  Connection.h  Link.h  Node.h
include/Object/Output/: OutputWriter.h
include/Object/TrafficSignal/: TrafficSignal.h  TrafficSignalSchedule.h
include/comm/: CmdMessage.hpp  CmdProcessServer.hpp  CmdSender.hpp  Connection.hpp  ConnectionServer.hpp  IGlobalSimController.hpp  ILocalSimController.hpp  MasterCommunicator.hpp  MasterHandler.hpp  SerializeTuple.hpp  SyncClient.hpp  SyncMessage.hpp  SyncServer.hpp  WorkerCommunicator.hpp  WorkerHandler.hpp  WorkerManager.hpp
include/json/: json-forwards.h  json.h
include/utils/: ParserInterface.h  ParserSALT.h  ParserSUMO.h  config.h  etc.h
scripts/: default.py  default.sh
src/: CMakeLists.txt
src/libsalt/: Cell.cpp  Cell.h  Connection.cpp  Connection.h  Lane.cpp  Lane.h  LibsaltDefs.h  Link.cpp  Link.h  Node.cpp  Node.h  Simulation.cpp  Simulation.h  TrafficSignal.cpp  TrafficSignal.h  Vehicle.cpp  Vehicle.h  VisClient.cpp  VisClient.hpp  VisMsg.h  libsalt.i
test/libsalt/: CMakeLists.txt  VisServer.cpp  c.sh  default.py  default.sh  test_bus.py  test_bus.sh  test_network.py  test_network.sh  test_simulation.py  test_simulation.sh  test_tls_phase_change.py  test_tls_phase_change.sh  test_vehicle.py  test_vehicle.sh  test_vehicle_based_waiting_info.py  test_vehicle_based_waiting_info.sh
